feat: add dashboard api display and crud
